--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,30 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap");
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Montserrat", sans-serif;
+}
+p {
+  font-size: 18px;
+  color: black;
+}
+
 .App {
   text-align: center;
 }
 
 .App-logo {
-
   height: 14vh;
   width: auto;
   pointer-events: none;
   padding: 5px;
-  border-radius: 60%; 
+  border-radius: 60%;
 }
 
-main{
-  width:100%;
+main {
+  width: 100%;
 }
 
 .App-header {
@@ -32,75 +42,57 @@ main{
   color: #61dafb;
 }
 
-.pull-left{
-  padding-top:3rem;
+.pull-left {
+  padding-top: 3rem;
   position: relative;
-  float:left;
-  color:black;
-  margin-right:27rem;
-  padding-right:11rem;
-
+  float: left;
+  color: black;
+  margin-right: 27rem;
+  padding-right: 11rem;
 }
 
-
 .sticky-top {
-    position: sticky;
-    margin: 0px;
-    z-index: 1020;
-    background-color: #edeeec;
+  position: sticky;
+  margin: 0px;
+  z-index: 1020;
+  background-color: #edeeec;
 }
 
 .navbar-light .navbar-nav .nav-link {
-    color:#8f2634;
-    font-weight: bold;
-    font-size: 1.3rem;
-    padding-right:4px;
+  color: #8f2634;
+  font-weight: bold;
+  font-size: 1.3rem;
+  padding-right: 4px;
 }
 
 .FaFacebook {
-  color:  rgb(131, 17, 17);
-  size:6px;
-
+  color: rgb(131, 17, 17);
+  size: 6px;
 }
 
 .nav-link:hover {
-    color:blue;
+  color: blue;
 }
 
-
-
 .bannerarea {
-  
   position: relative;
-  
   text-align: center;
-  width:100%;
+  width: 100%;
   color: white;
-  
   font-family: "Montserrat", sans-serif;
 }
 
-.wallpaper{
-  width:100%;
+.wallpaper {
+  width: 100%;
 }
 
 .firstText {
   position: absolute;
-  margin-top:30px;
+  margin-top: 30px;
   top: 45%;
   left: 45%;
   transform: translate(-50%, -50%);
   font-size: 35px;
-  font-weight: 700;
-  animation: text-animate 6s linear forwards; 
-}
-
-.secondText {
-  position: absolute;
-  top: 42%;
-  left: 40%;
-  transform: translate(-50%, -50%);
-  font-size: 33px;
   font-weight: 700;
   animation: text-animate 6s linear forwards;
 }
@@ -113,7 +105,7 @@ main{
 }
 
 .footer {
-  margin:auto;
+  margin: auto;
   background-color: #858688;
   color: #fff;
   display: flex;
@@ -123,10 +115,9 @@ main{
   text-align: center;
 }
 
-
 .bgdark {
   background: #f5ecec;
-  font-size: 1.2rem;
+  /*font-size: 1.2rem;*/
 }
 
 .images-content {
@@ -141,13 +132,23 @@ main{
   border-radius: 15px;
 }
 .img-item img {
-  width: 350px;
-  height: 350px;
+  width: 300px;
+  height: 300px;
   padding: 15px;
   transform-origin: 30% 45%;
   transition: transform 5s, filter 3s ease-in-out;
 }
 .img-item:hover img {
+  transform: scale(1.15);
+}
+.arrow-img img {
+  width: 230px;
+  height: 230px;
+  padding: 15px;
+  transform-origin: 30% 45%;
+  transition: transform 5s, filter 3s ease-in-out;
+}
+.arrow-img:hover img {
   transform: scale(1.15);
 }
 .box-cont p {
@@ -160,11 +161,12 @@ main{
 #Visit-Us {
   margin: 0 auto;
   padding-top: 50px;
-  display: flex;
+  /* display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: center;*/
 }
-#Visit-Us h2 {
+#Visit-Us h3,
+#About-Us h3 {
   font-size: 30px;
   text-shadow: 2px 2px #d07f8a;
   padding-bottom: 20px;
@@ -172,18 +174,23 @@ main{
 
 div.contact-container {
   display: flex;
-  
 }
 
-.map{
-  flex-basis:70%;
+.map {
+  flex-basis: 70%;
   flex-shrink: 0;
 }
-
-.cont {
-  width:30%;
-  padding-left:20px;
-  padding-top:14%;
+.map-container {
+  width: 100%;
+}
+.map-section {
+  width: 75%;
+  padding-left: 5px;
+  display: flex;
+}
+.contact-section {
+  width: 25%;
+  padding-left: 20px;
   display: flex;
 }
 .contact-info {
@@ -201,21 +208,19 @@ div.contact-container {
   padding-top: 10px;
   padding-left: 15px;
 }
-
-.contactDetails{
-  color: rgb(75, 72, 240);
+a :hover {
+  color: blue;
 }
 
-
-.CVR{
+.CVR {
   position: relative;
 }
 
 .inner-num {
-  position:absolute;  
-  margin-left:1%;
-  text-align:center;
-  color:white;
+  position: absolute;
+  margin-left: 6px;
+  text-align: center;
+  color: white;
 }
 .contact-info a:hover {
   transition: 1s;
@@ -223,13 +228,14 @@ div.contact-container {
   text-decoration: underline;
 }
 
-.aboutusImage{
+.aboutusImage {
   border-radius: 2%;
   border: 1px Solid;
   box-shadow: 10px 10px rgb(133, 4, 4);
-  margin: 1px;
-  padding:1px;
-  width:97%;
+  padding: 1px;
+  width: 97%;
+  margin-left: 40px;
+  margin-top: 20px;
 }
 
 .footer span {
@@ -248,52 +254,45 @@ div.contact-container {
   color: #ff0;
 }
 
-
-
 @media screen and (max-width: 400px) {
   div.firstText {
-     
     font-size: 20px;
   }
 }
 
 @media screen and (max-width: 580px) {
   div.firstText {
-      
-    font-size:20px;
-  }
-} 
-
-@media screen and (max-width: 650px) {
-  div.firstText { 
-    font-size:20px;
+    font-size: 20px;
   }
 }
 
+@media screen and (max-width: 650px) {
+  div.firstText {
+    font-size: 20px;
+  }
+}
 
 @media screen and (max-width: 650px) {
-  div.firstText { 
-    font-size:20px;
+  div.firstText {
+    font-size: 20px;
   }
 }
 
 @media screen and (max-width: 1050px) {
-.pull-left{
-  padding-top:3rem;
-  position: relative;
-  float:left;
-  color:black;
-  margin-right:4rem;
-
-}
+  .pull-left {
+    padding-top: 3rem;
+    position: relative;
+    float: left;
+    color: black;
+    margin-right: 4rem;
+  }
 }
 
 @media (min-width: 880px) {
-.navbar-expand-lg .navbar-nav .nav-link {
-  
+  .navbar-expand-lg .navbar-nav .nav-link {
     padding-right: 2rem;
     padding-left: 2rem;
-}
+  }
 }
 
 @media screen and (max-width: 900px) {
