--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap");
-html, body {
-  width: auto!important;
-   overflow-x: hidden!important
-  } 
+html,
+body {
+  width: auto !important;
+  overflow-x: hidden !important;
+}
 
 * {
   margin: 0;
@@ -30,12 +31,13 @@ p {
 main {
   width: 100%;
 }
- .wallpaper {
+.wallpaper {
   width: 100%;
-  background-position: center center; 
-  background-attachment: fixed; 
-  background-repeat: no-repeat; background-size: cover;
-} 
+  background-position: center center;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 .bannerarea ::before {
   position: absolute;
   top: 0px;
@@ -100,22 +102,6 @@ main {
   color: #61dafb;
 }
 
-.pull-left {
-  padding-top: 3rem;
-  position: relative;
-  float: left;
-  color: black;
-  margin-right: 27rem;
-  padding-right: 11rem;
-}
-
-.sticky-top {
-  position: sticky;
-  margin: 0px;
-  z-index: 1020;
-  background-color: #edeeec;
-}
-
 .navbar-light .navbar-nav .nav-link {
   color: #8f2634;
   font-weight: bold;
@@ -138,11 +124,12 @@ main {
   width: 100%;
   color: white;
   font-family: "Montserrat", sans-serif;
-  background-position: center center; 
-  background-attachment: fixed; 
-  background-repeat: no-repeat; background-size: cover; 
- 
+  background-position: center center;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
+
 .firstText {
   position: absolute;
   margin-top: 30px;
@@ -152,13 +139,6 @@ main {
   font-size: 35px;
   font-weight: 700;
   animation: text-animate 6s linear forwards;
-}
-
-.arrow {
-  background-repeat: no-repeat;
-  background-position: 50%;
-  background-size: cover;
-  position: relative;
 }
 
 .footer {
@@ -182,31 +162,53 @@ main {
   justify-content: center;
   align-items: center;
 }
+
 .img-item {
-  margin: 10px;
+  margin: 15px;
   overflow: hidden;
   border-radius: 15px;
 }
+
 .img-item img {
-  width: 300px;
-  height: 350px;
-  padding: 15px;
+  width: 310px;
+  height: 240px;
   transform-origin: 30% 45%;
   transition: transform 5s, filter 3s ease-in-out;
 }
+
 .img-item:hover img {
   transform: scale(1.15);
 }
+
+.arrow-img {
+  margin: 5px;
+  overflow: hidden;
+  border-radius: 15px;
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+
 .arrow-img img {
   width: 250px;
-  height: 250px;
+  /* height: 230px;  */
   padding: 15px;
   transform-origin: 30% 45%;
   transition: transform 5s, filter 3s ease-in-out;
 }
+
+.arrow-text {
+  position: absolute;
+  margin-left: 20px;
+  width: 65%;
+  text-align: center;
+  /*font-weight: bold;*/
+}
+
 .arrow-img:hover img {
   transform: scale(1.15);
 }
+
 .box-cont p {
   text-align: center;
   line-height: 1.5em;
@@ -214,12 +216,15 @@ main {
   width: 70%;
 }
 
-#Visit-Us,#Services {
+#Visit-Us,
+#Services {
   margin: 0 auto;
   padding-top: 50px;
 }
+
 #Visit-Us h3,
-#About-Us h3, #Services h3 {
+#About-Us h3,
+#Services h3 {
   font-size: 30px;
   text-shadow: 2px 2px #d07f8a;
   padding-bottom: 20px;
@@ -229,45 +234,46 @@ div.contact-container {
   display: flex;
 }
 
-.map {
-  flex-basis: 70%;
-  flex-shrink: 0;
-}
 .map-container {
   width: 100%;
 }
+
 .map-section {
   width: 75%;
   padding-left: 5px;
   display: flex;
 }
+
+.map {
+  flex-basis: 70%;
+  flex-shrink: 0;
+}
+
 .contact-section {
   width: 25%;
-  margin: 15px;
+  margin: 20px;
   padding-left: 20px;
   display: flex;
 }
+
 .contact-info {
   display: flex;
   margin: 10px;
-  align-items: center;
-  justify-content: flex-start;
 }
-.contact-info img {
-  width: 40px;
-  height: 40px;
-  margin-right: 15px;
-}
+
 .contact-info p {
   padding-top: 10px;
   padding-left: 15px;
 }
+
 a :hover {
   color: blue;
 }
 
 .CVR {
   position: relative;
+  display: flex;
+  align-items: center;
 }
 
 .inner-num {
@@ -291,7 +297,6 @@ a :hover {
   margin-left: 40px;
   margin-top: 20px;
 }
-
 
 .footer span {
   padding: 5px;
@@ -323,21 +328,19 @@ a :hover {
     margin-top: 20px;
     height: 100%;
   }
-  
-    .map-section {
-      width: 100%;
-      padding-left: 5px;
-      padding-right: 5px;
-      display: flex;
+
+  .map-section {
+    width: 100%;
+    padding-left: 5px;
+    padding-right: 5px;
+    display: flex;
   }
   .contact-section {
-    width: 35%;
+    width: 25%;
     margin: 15px;
     padding-left: 20px;
   }
   .contact-info p {
-    padding-top: 10px;
-    padding-left: 15px;
     font-size: 14px;
   }
 }
@@ -346,53 +349,41 @@ a :hover {
   div.firstText {
     font-size: 20px;
   }
-
 }
 
 @media screen and (max-width: 650px) {
- 
-  .bannerarea{
+  .bannerarea {
     background-image: url("./assets/images/banner.jpg");
   }
- 
+
   .firstText span {
     font-size: 20px;
+  }
+  .map-section {
+    width: 100%;
+    padding-left: 5px;
+    padding-right: 5px;
+    display: flex;
   }
   .contact-section {
     width: 25%;
     margin: 15px;
     padding-left: 20px;
-   
   }
-  
-  .map-section {
-    width: 100%;
-    padding-left: 5px;
-    padding-right: 5px;
-    display: flex;
-}
 }
 
 @media screen and (max-width: 1050px) {
-  .pull-left {
-    padding-top: 3rem;
-    position: relative;
-    float: left;
-    color: black;
-    margin-right: 4rem;
-  }
-  .contact-section {
-    width: 35%;
-    margin: 15px;
-    padding-left: 20px;
-  }
-  
   .map-section {
     width: 100%;
     padding-left: 5px;
     padding-right: 5px;
     display: flex;
-}
+  }
+  .contact-section {
+    width: 40%; /*35*/
+    margin: 20px;
+    padding-left: 20px;
+  }
 }
 
 @media (min-width: 880px) {
@@ -400,14 +391,10 @@ a :hover {
     padding-right: 2rem;
     padding-left: 2rem;
   }
-  
 }
 
 @media screen and (max-width: 900px) {
-  div.contact-container,.images-content {
+  div.contact-container {
     flex-direction: column;
-   
   }
-  
- 
 }
