--- a/src/App.css
+++ b/src/App.css
@@ -384,6 +384,9 @@ a :hover {
     margin: 20px;
     padding-left: 20px;
   }
+  .images-content{
+    flex-direction: column;
+  }
 }
 
 @media (min-width: 880px) {
