Changed image display to row for iPad (pro)

--- a/src/App.css
+++ b/src/App.css
@@ -372,9 +372,9 @@ a :hover {
     padding-right: 5px;
     display: flex;
   }  
-  .images-content{
+  /*.images-content{
     flex-direction: column;
-  }
+  }*/
 }
 
 @media (min-width: 880px) {
